# kdsingleapplicationguard

./: .gitignore  bootstrap.sh  meson.build  meson_options.txt
src/: kdsingleapplicationguard.cpp  meson.build
